@@ -1,4 +1,5 @@
 HEAD
+	+ Check if provision is possible before saving changes
 	+ Changes to allow provision as ADC
 	+ Improve doc for the conf key sodod_prefork
 	+ Fix error when removing the sogo database in deprovision
